project-setup/ec2/sg.tf
resource "aws_security_group" "allow_ssh" {
    name            = "allow_${var.COMPONENT}"
    description     = "Allow SSH inbound traffic"

    ingress {
        description           = "SSH from INTERNET"
        from_port             = 22
        to_port               = 22
        protocol              = "tcp"
        cidr_blocks           = ["0.0.0.0/0"]
    }

        ingress {
        description           = "HTTP from INTERNET"
        from_port             = 80
        to_port               = 80
        protocol              = "tcp"
        cidr_blocks           = ["0.0.0.0/0"]
    }

    egress {
        from_port            = 0
        to_port              = 0
        protocol             = "-1"
        cidr_blocks          = ["0.0.0.0/0"]

    }

    tags  = {
        Name = "allow_${var.COMPONENT}"
    }
}
